--- a/newfile.html
+++ b/newfile.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Github Session</title>
+    <link rel="stylesheet" href="style.css"/>
     <style>
-       .demo{
-        background-color: yellow;
-       }
+        .demo {
+            background-color: yellow;
+        }
     </style>
 </head>
 
 <body>
-    <h1 >Second github class on 10 jan 25</h1>
+    <h1>Second github class on 10 jan 25</h1>
     <p class="demo">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur
         fugit repellendus, voluptatum a rerum veniam impedit blanditiis
